--- a/3.Cloud/2.paas/kubernetes/manifests/3.pv/pv1.yml
+++ b/3.Cloud/2.paas/kubernetes/manifests/3.pv/pv1.yml
@@ -2,12 +2,11 @@ apiVersion: "v1"
 kind: "PersistentVolume"
 metadata:
   name: "pvnfs01"
+  namespace:
+  label:
+  annotation:
 spec:
   capacity:
     storage: "3Gi"
   accessModes:
   - "ReadWriteOnce"
-  nfs:
-    path: "/mnt/share/pv1"
-    server: "10.12.7.59"
-  persistentVolumeReclaimPolicy: "Retain" #"Recycle"
