--- a/x.ideas/__mycloud/svc.yaml
+++ b/x.ideas/__mycloud/svc.yaml
@@ -1,9 +1,10 @@
+# ingress
+# service
 ideal cluster:
 - everything on BM
 - no specific role nodes (maybe except for gpu), only compute and worker
 - cilium service mesh in ebpf mode, with full SMI support.
 - ceph-csi + rook
-- cosi s3
 - multi-cluster networking, a service can be exposed in multiple clusters
 
 
@@ -12,25 +13,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rebel-base
-  annotations:
-    io.cilium/global-service: "true"
-    io.cilium/shared-service: "true"
 spec:
-  type: ClusterIP
-  ports:
-  - port: 80
-  rules:
-  - match: grafana.yosefpor.com #foo.mydomain.com
-    http:
-      paths:
-      - path:
-        backend:
-          serviceName: prom-grafana
-          servicePort: 80
+  type: ClusterIP # Headless, LB
+  clusterIP: # auto-gen
+  loadBalancerIP: # auto-gen
   match:
   - name: firefox-users
     headers:
       user-agent: ".*Firefox.*"
+    uri: sth
   - match:
     - headers:
         end-user:
@@ -59,3 +50,16 @@ spec:
         response:
           remove:
           - foo
+
+
+
+    redirect:
+      uri: /v1/bookRatings
+      authority: newratings.default.svc.cluster.local
+
+
+
+    retries:
+      attempts: 3
+      perTryTimeout: 2s
+      retryOn: gateway-error,connect-failure,refused-stream
